--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -68,7 +68,60 @@
     "direction": "ltr",
     "fontFamily": "インター"
   },
-  "games": {},
+  "games": {
+    "double-shap10r": {
+      "title": "ダブル シャープ10r",
+      "description": "2 つの Shap10r パズルを同時に解いてチャレンジしましょう。この古典的なゲームの難解なバリエーションでは、共通の形と色を使用して、2 つの数字の組み合わせを同時に解きます。",
+      "shortDescription": "共有リソースによる二重パズル解決",
+      "features": {
+        "feature1": {
+          "title": "デュアルゲームボード",
+          "description": "共有された図形のプールを使用して、2 つの独立した Shap10r パズルを同時に解く"
+        },
+        "feature2": {
+          "title": "戦略計画",
+          "description": "両方のボード間で形状の使用を慎重に管理してソリューションを最適化します"
+        },
+        "feature3": {
+          "title": "強化チャレンジ",
+          "description": "相互接続されたゲームプレイの仕組みでパズルの複雑さが倍増"
+        },
+        "feature4": {
+          "title": "共有リソース",
+          "description": "両方のボードで同じ形と色を使用して、独自の戦略的な深みを実現します。"
+        }
+      },
+      "howToPlay": {
+        "step1": "共有選択領域から図形と色を選択します",
+        "step2": "どちらかのボードにピースを配置して、目標数を目指します。",
+        "step3": "片方のボードで使用されている形状がもう片方のボードの可用性に影響を与えるため、慎重に動きを計画してください。",
+        "step4": "勝利するには、許可された試行回数内で両方のパズルを完成させてください。"
+      },
+      "seo": {
+        "title": "Double Shap10r | デュアルボード数字パズルゲーム",
+        "description": "形と色を共有する 2 つの同時パズル ボードを備えた Double Shap10r で、頭脳に挑戦しましょう。戦略的なデュアル ボード ゲームプレイで、パズルの解決能力が向上します。",
+        "keywords": "Double Shap10r、デュアルパズル、数字ゲーム、ロジックゲーム、戦略ゲーム、形状マッチング、色マッチング"
+      },
+      "faqs": {
+        "faq1": {
+          "question": "Double Shap10r は通常の Shap10r とどう違うのですか?",
+          "answer": "Double Shap10r には、同じ形と色のプールを共有する 2 つのゲーム ボードがあり、両方のパズルを同時に解くには戦略的な計画が必要です。"
+        },
+        "faq2": {
+          "question": "両方のボードを一緒に完成させる必要がありますか?",
+          "answer": "はい、2 つのボード間で形状の選択を慎重に管理しながら、許可された試行回数内で両方のパズルを解く必要があります。"
+        },
+        "faq3": {
+          "question": "通常のShap10rよりも難しいですか？",
+          "answer": "はい、共有リソースを持つ 2 つのボードを管理すると、ゲームに新たな戦略性と複雑さが加わります。"
+        },
+        "faq4": {
+          "question": "利用できる異なるモードはありますか?",
+          "answer": "通常の Shap10r と同様に、両方のボードでソートされた値を使用する通常モードまたはソートされていない値を使用するハード モードでプレイできます。"
+        }
+      }
+    }
+  },
   "game": {
     "playNow": "今すぐプレイ",
     "fullscreenTip": "最高の体験を得るには、F11 キーを押すか、全画面ボタンをクリックしてください。",
