--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -68,7 +68,60 @@
     "direction": "왼쪽",
     "fontFamily": "인터"
   },
-  "games": {},
+  "games": {
+    "double-shap10r": {
+      "title": "더블 샤프10r",
+      "description": "두 개의 동시 Shap10r 퍼즐로 도전하세요. 공유된 모양과 색상을 사용하여 이 고전 게임의 마인드 벤딩 변형에서 두 숫자 조합을 동시에 풀어보세요.",
+      "shortDescription": "공유 리소스를 사용한 듀얼 퍼즐 풀기",
+      "features": {
+        "feature1": {
+          "title": "듀얼 게임 보드",
+          "description": "공유 모양 풀을 사용하여 두 개의 독립적인 Shap10r 퍼즐을 동시에 풀어보세요."
+        },
+        "feature2": {
+          "title": "전략적 계획",
+          "description": "두 보드 간의 모양 사용을 신중하게 관리하여 솔루션을 최적화하세요."
+        },
+        "feature3": {
+          "title": "강화된 도전",
+          "description": "상호 연결된 게임 플레이 메커니즘으로 퍼즐 복잡성을 두 배로 높였습니다."
+        },
+        "feature4": {
+          "title": "공유 리소스",
+          "description": "두 보드 모두에서 동일한 모양과 색상을 사용하여 고유한 전략적 깊이를 구현합니다."
+        }
+      },
+      "howToPlay": {
+        "step1": "공유 선택 영역에서 모양과 색상을 선택하세요",
+        "step2": "목표 숫자를 달성하기 위해 보드에 조각을 배치하세요.",
+        "step3": "한 보드에서 사용된 모양이 다른 보드의 가용성에 영향을 미치므로 신중하게 움직임을 계획하십시오.",
+        "step4": "허용된 시도 시간 내에 두 퍼즐을 모두 완료하면 승리합니다."
+      },
+      "seo": {
+        "title": "더블 샵10r | 듀얼 보드 숫자 퍼즐 게임",
+        "description": "Double Shap10r로 당신의 정신에 도전하세요. 모양과 색상을 공유하는 두 개의 동시 퍼즐 보드가 특징입니다. 향상된 퍼즐 풀기를 위한 전략적 듀얼 보드 게임플레이.",
+        "keywords": "더블 섀프10r, 듀얼 퍼즐, 숫자 게임, 논리 게임, 전략 게임, 모양 매칭, 색상 매칭"
+      },
+      "faqs": {
+        "faq1": {
+          "question": "Double Shap10r은 일반 Shap10r과 어떻게 다릅니까?",
+          "answer": "Double Shap10r은 같은 모양과 색상을 공유하는 두 개의 게임 보드로 구성되어 있으며, 두 퍼즐을 동시에 풀기 위해서는 전략적 계획이 필요합니다."
+        },
+        "faq2": {
+          "question": "두 보드를 함께 작성해야 합니까?",
+          "answer": "네, 허용된 시도 횟수 내에 두 퍼즐을 모두 풀어야 하며, 두 보드 사이에서 모양 선택을 신중하게 관리해야 합니다."
+        },
+        "faq3": {
+          "question": "일반 Shap10r보다 더 어렵나요?",
+          "answer": "그렇습니다. 공유 리소스를 사용하는 두 개의 보드를 관리하면 게임의 전략성과 복잡성이 한층 높아집니다."
+        },
+        "faq4": {
+          "question": "다양한 모드가 있나요?",
+          "answer": "일반적인 Shap10r과 마찬가지로, 두 보드 모두에서 정렬된 값을 사용하는 일반 모드와 정렬되지 않은 값을 사용하는 하드 모드로 플레이할 수 있습니다."
+        }
+      }
+    }
+  },
   "game": {
     "playNow": "지금 플레이",
     "fullscreenTip": "최상의 경험을 위해 F11을 누르거나 전체 화면 버튼을 클릭하세요.",
