--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -68,7 +68,60 @@
     "direction": "лтр",
     "fontFamily": "Интер"
   },
-  "games": {},
+  "games": {
+    "double-shap10r": {
+      "title": "Двойной Шейп10р",
+      "description": "Испытайте себя с двумя одновременными головоломками Shap10r. Используйте общие формы и цвета, чтобы решить обе комбинации чисел одновременно в этом ошеломляющем варианте классической игры.",
+      "shortDescription": "Двойное решение головоломок с общими ресурсами",
+      "features": {
+        "feature1": {
+          "title": "Двойные игровые доски",
+          "description": "Решите две независимые головоломки Shap10r одновременно, используя общий набор фигур."
+        },
+        "feature2": {
+          "title": "Стратегическое планирование",
+          "description": "Тщательно управляйте использованием форм между обеими платами, чтобы оптимизировать свои решения."
+        },
+        "feature3": {
+          "title": "Расширенный вызов",
+          "description": "Удвойте сложность головоломок благодаря взаимосвязанным игровым механикам"
+        },
+        "feature4": {
+          "title": "Общие ресурсы",
+          "description": "Используйте одинаковые формы и цвета на обеих досках для уникальной стратегической глубины."
+        }
+      },
+      "howToPlay": {
+        "step1": "Выберите формы и цвета из общей области выбора.",
+        "step2": "Расположите фигуры на каждой доске так, чтобы они приближались к целевому числу.",
+        "step3": "Тщательно планируйте свои ходы, поскольку фигуры, используемые на одной доске, влияют на доступность фигур на другой.",
+        "step4": "Решите обе головоломки за отведенное время, чтобы победить."
+      },
+      "seo": {
+        "title": "Double Shap10r | Двойная числовая головоломка",
+        "description": "Испытайте свой ум с Double Shap10r, включающим две одновременные доски для головоломок, которые делятся формами и цветами. Стратегический игровой процесс с двумя досками для улучшенного решения головоломок.",
+        "keywords": "Double Shap10r, двойная головоломка, числовая игра, логическая игра, стратегическая игра, сопоставление форм, сопоставление цветов"
+      },
+      "faqs": {
+        "faq1": {
+          "question": "Чем Double Shap10r отличается от обычного Shap10r?",
+          "answer": "Double Shap10r представляет собой две игровые доски с одинаковым набором фигур и цветов, требуя стратегического планирования для одновременного решения обеих головоломок."
+        },
+        "faq2": {
+          "question": "Необходимо ли заполнять обе доски одновременно?",
+          "answer": "Да, вам необходимо решить обе головоломки за отведенное время, внимательно выбирая фигуры между двумя досками."
+        },
+        "faq3": {
+          "question": "Он сложнее обычного Shap10r?",
+          "answer": "Да, управление двумя досками с общими ресурсами добавляет игре дополнительный уровень стратегии и сложности."
+        },
+        "faq4": {
+          "question": "Доступны ли различные режимы?",
+          "answer": "Как и в обычном Shap10r, вы можете играть в обычном режиме с отсортированными значениями или в сложном режиме с несортированными значениями на обеих досках."
+        }
+      }
+    }
+  },
   "game": {
     "playNow": "Играть сейчас",
     "fullscreenTip": "Нажмите F11 или кнопку полноэкранного режима для наилучшего просмотра",
