--- a/src/locales/zh-tw.json
+++ b/src/locales/zh-tw.json
@@ -68,7 +68,60 @@
     "direction": "左轉",
     "fontFamily": "國際米蘭"
   },
-  "games": {},
+  "games": {
+    "double-shap10r": {
+      "title": "雙形10r",
+      "description": "透過兩個同時進行的 Shap10r 謎題來挑戰自己。在這款令人費解的經典遊戲變體中，使用共享的形狀和顏色同時解決兩個數字組合。",
+      "shortDescription": "使用共享資源解決雙重謎題",
+      "features": {
+        "feature1": {
+          "title": "雙遊戲板",
+          "description": "使用共享形狀池同時解決兩個獨立的 Shap10r 謎題"
+        },
+        "feature2": {
+          "title": "策略規劃",
+          "description": "仔細管理兩塊板之間的形狀使用情況以優化您的解決方案"
+        },
+        "feature3": {
+          "title": "增強挑戰",
+          "description": "透過相互關聯的遊戲機制使謎題複雜性加倍"
+        },
+        "feature4": {
+          "title": "共享資源",
+          "description": "在兩個板上使用相同的形狀和顏色以獲得獨特的戰略深度"
+        }
+      },
+      "howToPlay": {
+        "step1": "從共享選擇區域中選擇形狀和顏色",
+        "step2": "將棋子放置在任一棋盤上以達到目標數量",
+        "step3": "仔細規劃您的動作，因為一個棋盤上使用的形狀會影響另一個棋盤的可用性",
+        "step4": "在允許的獲勝嘗試範圍內完成兩個謎題"
+      },
+      "seo": {
+        "title": "雙 Sha10r |雙板數位益智遊戲",
+        "description": "使用 Double Shap10r 挑戰您的思維，它具有兩個同時共享形狀和顏色的拼圖板。戰略雙板遊戲可增強解謎能力。",
+        "keywords": "Double Shap10r、雙重益智、數位遊戲、邏輯遊戲、策略遊戲、形狀匹配、顏色匹配"
+      },
+      "faqs": {
+        "faq1": {
+          "question": "雙 Shap10r 與普通 Shap10r 有何不同？",
+          "answer": "Double Shap10r 具有兩個共享相同形狀和顏色的遊戲板，需要策略規劃來同時解決兩個謎題。"
+        },
+        "faq2": {
+          "question": "兩塊板需要一起完成嗎？",
+          "answer": "是的，您必須在允許的嘗試範圍內解決兩個謎題，並在兩個板之間仔細管理您的形狀選擇。"
+        },
+        "faq3": {
+          "question": "是不是比普通的Shap10r更難？",
+          "answer": "是的，管理兩個具有共享資源的棋盤會為遊戲增加一層額外的策略和複雜性。"
+        },
+        "faq4": {
+          "question": "有不同的模式可用嗎？",
+          "answer": "與常規 Shap10r 一樣，您可以在正常模式下玩已排序值的遊戲，也可以在困難模式下玩未排序值的遊戲。"
+        }
+      }
+    }
+  },
   "game": {
     "playNow": "立即播放",
     "fullscreenTip": "按 F11 或按一下全螢幕按鈕以獲得最佳體驗",
